# Darwin_OP

./: README.md  darwinOP.urdf  darwinOP.urdf~  manifest.xml  manifest.xml~
Darwin-OP tracking Ball/: CMakeLists.txt  camera_dump.cc  darwin_plugin.cc  darwinoptimalball3
Darwin_Optimal_Preview_Control_Walking/: Darwin_OPC_walking  darwin_plugin.cc  darwin_plugin.cc~
Darwin_walking_back/: CMakeLists.txt  CMakeLists.txt~  darwin_plugin.cc
Darwin_walking_forward/: CMakeLists.txt~  darwin_plugin.cc  darwin_plugin_2.cc~  darwin_plugin_3.cc~  darwin_plugin_4.cc~
Door_In/: CMakeLists.txt~  darwin_door.world  darwin_plugin.cc  darwin_plugin_5.cc~  darwin_plugin_6.cc~
Door_Out/: darwin_OP_door_2.world  darwin_plugin_3.cc~
darwin_plugin/: CMakeLists.txt~  ReadMe.txt  darwin_plugin.cc  darwin_plugin.cc~  darwin_plugin_func~  darwin_plugin~
double_Door/: CMakeLists.txt  CMakeLists.txt~  darwin_door.world  darwin_plugin.cc  darwin_plugin_3.cc~
